# fast_person_segmentation

./: .gitignore  README.md  cleanup.sh
aiortc_webserver/: .dockerignore  Dockerfile  README.md  requirements.txt  run_docker_server.sh  server.py
aiortc_webserver/templates/: index.html
cpp/cpp_tflite/: CMakeLists.txt  README.md
cpp/cpp_tflite/include/common/: common.h  common.hpp
cpp/cpp_tflite/src/: common.cpp  webcam_tflite.cpp
cpp/cpp_tflite_mt/: CMakeLists.txt  README.md
cpp/cpp_tflite_mt/include/common/: camera_streamer.hpp
cpp/cpp_tflite_mt/src/: camera_streamer.cpp  common.cpp  webcam_tflite.cpp
cpp/cppflow_pseg/: README.md
cpp/cppflow_pseg/examples/pseg_model/: CMakeLists.txt  main.cpp
cpp/cppflow_pseg/examples/pseg_model/model_zoo/: mnetv3_decoder_144x256.pb  prisma_orig_s256.pb
flask_webserver/: Dockerfile  README.md  requirements.txt  run_docker_server.sh  server_cv2_local.py  server_socketio.py
flask_webserver/static/: html_video_capture.js  socket.io.min.js
flask_webserver/templates/: index_local_cv2.html  index_socketio.html
python/: README.md  conda_install.sh  conda_install_tf1.sh  conda_install_tf2.sh  conv_model_hdf5_to_ckpt.py  conv_model_hdf5_to_h5_wt_and_json_graph.py  conv_model_hdf5_to_saved_model.py  eval.py  export.py  inference_tensorflow_pb.py  inference_webcam_all.sh  requirements.txt  run_inference.sh  seg_video.py  test.py  train_munet_mnetv2.py  train_with_vars.sh
python/conversion/: conv_hdf5_to_tflite.py  conv_model_hdf5_to_pb.py  conv_tf1_hdf5_to_ckpt.py  conv_tf1_hdf5_to_h5_wt_and_json_graph.py  conv_tf1_hdf5_to_pb.py  conv_tf1_hdf5_to_saved_model.py  conv_tf1_hdf5_to_tflite.py  conv_tf2_hdf5_to_pb.py  conv_tf2_hdf5_to_tflite.py
python/inference/: inference_graphdef_mthread.py  inference_graphdef_pb.py  inference_mediapipe.py  inference_minimal.py  inference_nosmoothed_with_slider.py  inference_openvino.py  (+18 more)
(+40 files in other folders)
